--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,49 +19,58 @@
 </div>
 
 <div class="container-fluid">
-  {{#each articles}}
+  {{#each Articles}}
     <!-- Article card -->
     <div class="card">
       <div class="card-header bg-secondary">
-        <a href="https://arstechnica.com/tech-policy/2018/02/nvidia-profits-soar-as-cryptocurrency-boom-creates-gpu-shortage/" class="text-light"><h5>Cryptocurrency boom, a problem for gamers, is a bonanza for GPU makers</h5></a>
+        <a href="{{link}}" class="text-light"><h5>{{title}}</h5></a>
       </div>
       <div class="card-body bg-light">
-        <p class="card-text">Nvidia: \"Strong demand in the cryptocurrency market exceeded our expectations.\"</p>
+        <p class="card-text">{{summary}}</p>
         <hr>
-        <p class="card-text article-date text-muted">15 February 2018, 1:45pm</p>
+        <p class="card-text article-date text-muted">{{postDate}}</p>
+        <!-- Begin comments modal -->
         <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="modal-label">Comments on: <span class="article-title">Article</span></h5>
+                <h5 class="modal-title" id="modal-label">Comments on: <span class="article-title">{{title}}</span></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div class="modal-body">
-                <p><span class="comment-header">Comment title</span>
-                  <button type="button" class="delete" aria-label="Delete">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </p>
-                <p class="comment-body">More text here.</p>
-                <p class="comment-date text-muted">15 February 2018, 1:45pm</p>
-                <hr>
+                {{#each note}}
+                  <p><span class="comment-header">{{Note.title}}</span>
+                    <button type="button" class="delete" aria-label="Delete" data-id="{{Note._id}}">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </p>
+                  <p class="comment-body">{{Note.body}}</p>
+                  <p class="comment-date text-muted">{{Note.commentDate}}</p>
+                  <hr>
+                {{/each}}
                 <form>
                   <div class="form-group">
-                    <label for="message-text" class="col-form-label">Note:</label>
-                    <textarea class="form-control" id="message-text"></textarea>
+                    <label for="new-title">Title</label>
+                    <input type="text" class="form-control" id="new-title" placeholder="Title">
+                  </div>
+                  <div class="form-group">
+                    <label for="new-body" class="col-form-label">Your Comment:</label>
+                    <textarea class="form-control" id="new-body"></textarea>
                   </div>
                 </form>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-danger">Make note</button>
+                <button type="button" class="btn btn-danger" id="save-comment" data-id="{{_id}}">Make comment</button>
               </div>
             </div>
           </div>
         </div>
-        <button type="button" class="btn btn-warning" data-toggle="modal" data-target="#exampleModal">Comment on article</button>
+        <!-- End comments modal -->
+
+        <button type="button" class="btn btn-warning article-button" data-toggle="modal" data-id="{{_id}}"data-target="#exampleModal">Comment on article</button>
       </div>
     </div>
   {{/each}}
