--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,74 +4,71 @@
     <h1 class="display-4">mongo-technica</h1>
     <p class="small">MTH-MS1</p>
     <p class="lead">Scrape articles from Ars Technica and comment on them.</p>
-    <div class="btn-group btn-group-toggle" data-toggle="buttons">
-      <label class="btn btn-info btn-sm active">
-        <input type="radio" name="options" id="scrape" autocomplete="off" checked> Scrape New Articles
-      </label>
-      <label class="btn btn-secondary btn-sm">
-        <input type="radio" name="options" id="all-articles" autocomplete="off"> All Articles
-      </label>
-      <label class="btn btn-secondary btn-sm">
-        <input type="radio" name="options" id="commented-articles" autocomplete="off"> Articles with Comments
-      </label>
+    <div class="btn-group" aria-label="action-buttons">
+      <button type="button" class="btn btn-info btn-sm active" id="scrape"> Scrape New Articles</button>
+      <button type="button" class="btn btn-secondary btn-sm" id="all-articles"> All Articles</button>
+      <button type="button" class="btn btn-secondary btn-sm" id="commented-articles"> Articles with Comments</button>
     </div>
   </div>
 </div>
 
-<div class="container-fluid">
+<div class="container-fluid" id="article-div">
   {{#each Articles}}
-    <!-- Article card -->
-    <div class="card">
-      <div class="card-header bg-secondary">
-        <a href="{{link}}" class="text-light"><h5>{{title}}</h5></a>
-      </div>
-      <div class="card-body bg-light">
-        <p class="card-text">{{summary}}</p>
-        <hr>
-        <p class="card-text article-date text-muted">{{postDate}}</p>
-        <!-- Begin comments modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="modal-label">Comments on: <span class="article-title">{{title}}</span></h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+  <!-- Article card -->
+  <div class="card">
+    <div class="card-header bg-secondary">
+      <a href="{{link}}" class="text-light">
+        <h5>{{title}}</h5>
+      </a>
+    </div>
+    <div class="card-body bg-light">
+      <p class="card-text">{{summary}}</p>
+      <hr>
+      <p class="card-text article-date text-muted">{{moment postDate "DD MMMM YYYY, h:mma"}}</p>
+      <button type="button" class="btn btn-warning article-button" data-toggle="modal" data-id="{{_id}}" data-target="#commentsModal{{_id}}">Comment on article</button>
+      <!-- Begin comments modal -->
+      <div class="modal fade" id="commentsModal{{_id}}" tabindex="-1" role="dialog" aria-labelledby="commentsModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modal-label">Comments on:
+                <span class="article-title">{{title}}</span>
+              </h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              {{#each note}}
+              <p>
+                <span class="comment-header">{{Note.title}}</span>
+                <button type="button" class="delete" aria-label="Delete" data-id="{{Note._id}}">
                   <span aria-hidden="true">&times;</span>
                 </button>
-              </div>
-              <div class="modal-body">
-                {{#each note}}
-                  <p><span class="comment-header">{{Note.title}}</span>
-                    <button type="button" class="delete" aria-label="Delete" data-id="{{Note._id}}">
-                      <span aria-hidden="true">&times;</span>
-                    </button>
-                  </p>
-                  <p class="comment-body">{{Note.body}}</p>
-                  <p class="comment-date text-muted">{{Note.commentDate}}</p>
-                  <hr>
-                {{/each}}
-                <form>
-                  <div class="form-group">
-                    <label for="new-title">Title</label>
-                    <input type="text" class="form-control" id="new-title" placeholder="Title">
-                  </div>
-                  <div class="form-group">
-                    <label for="new-body" class="col-form-label">Your Comment:</label>
-                    <textarea class="form-control" id="new-body"></textarea>
-                  </div>
-                </form>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-danger" id="save-comment" data-id="{{_id}}">Make comment</button>
-              </div>
+              </p>
+              <p class="comment-body">{{Note.body}}</p>
+              <p class="comment-date text-muted" id="hb-content">{{moment Note.commentDate "DD MMMM YYYY, h:mma"}}</p>
+              <hr> {{/each}}
+              <form>
+                <div class="form-group">
+                  <label for="new-title">Title</label>
+                  <input type="text" class="form-control" id="new-title" placeholder="Title">
+                </div>
+                <div class="form-group">
+                  <label for="new-body" class="col-form-label">Your Comment:</label>
+                  <textarea class="form-control" id="new-body"></textarea>
+                </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-danger save-comment" data-id="{{_id}}">Make comment</button>
             </div>
           </div>
         </div>
-        <!-- End comments modal -->
-
-        <button type="button" class="btn btn-warning article-button" data-toggle="modal" data-id="{{_id}}"data-target="#exampleModal">Comment on article</button>
       </div>
+      <!-- End comments modal -->
     </div>
+  </div>
   {{/each}}
 </div>
