changed scrape alert responses

--- a/views/article.handlebars
+++ b/views/article.handlebars
@@ -16,7 +16,7 @@
   <!-- Article card -->
   <div class="card">
     <div class="card-header bg-secondary">
-      <a href="{{Articles.link}}" class="text-light">
+      <a href="{{Articles.link}}" class="text-light" target="_blank">
         <h5>{{Articles.title}}</h5>
       </a>
     </div>
