--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
   <!-- Article card -->
   <div class="card">
     <div class="card-header bg-secondary">
-      <a href="{{link}}" class="text-light">
+      <a href="{{link}}" class="text-light" target="_blank">
         <h5>{{title}}</h5>
       </a>
     </div>
